2011-06-01 Magnus Hagdorn
 * PyGC/PyGC/IO/GC_loadfile.py: fix index ordering

2011-05-31 Magnus Hagdorn
 * PyGC/progs/plotGCProfile: add option to limit the yrange
 * extensions/erosion/scripts/plotGCSedsProfile: ditto

2011-05-24 Magnus Hagdorn
 * doc/Makefile.am: remake docs if any tex or eps file has changed

2011-03-16 Magnus Hagdorn
 * libglimmer/glimmer_searchcircle.F90: simplify search circle computations

2011-03-07 Magnus Hagdorn
 * example-drivers/eis/Makefile.am: decent into test directories for various
   test run related rules
 * extensions/erosion/src/Makefile.am: make sure erosion lib is static only

2011-03-04 Magnus Hagdorn
 * tests/EISMINT/EISMINT-1/*.config: add output file with 1000a output freq
 * tests/EISMINT/EISMINT-2/*.config: ditto

2011-02-09 Magnus Hagdorn
 * PyGC/PyGC/GC_options.py: make var method public
 * PyGC/progs/Makefile.am: add new program
 * PyGC/progs/compareGCvar: new program to display difference in a variable
   between two files
 
2011-01-12 Magnus Hagdorn
 * Makefile.am: remove gold standard distribution directory once tar-balled
 * configure.in: make sure path to gold standard is absolute
 * extra_rules.am: report missing files; make sure data to be compared has been
   computed; only create directory if files are to be copied, use hard links
   rather than copy the files
 * example-drivers/Makefile.am: add a check-data target
 * example-drivers/EISMINT-3/Makefile.am: ditto
 * tests/EISMINT/EISMINT-1/Makefile.am: specify which data files are required
   for gold standard
 * tests/EISMINT/EISMINT-2/Makefile.am: ditto
 * tests/exact-isothermal/Makefile.am: add a check-data and dist-gold-standard
   target
 * tests/exact-isothermal/tests/Makefile.am: include extra_rules.am

2010-12-03 Sarah Shannon
 * extra_rules.am: add dist-gold-standard rule to create a tar file of test data	
 * Makefile.am: ditto
	
2010-11-25 Sarah Shannon
 * extra_rules.am: add check-data rule to compare tests to gold standards
