@@ -1,4 +1,4 @@
-python_progs = plotGCvar plotGCProfile plotGCProfileTS plotGCSpot plotGCSpotTS plotEISMINT2stats compareGCvar
+python_progs = plotGCvar plotGCProfile plotGCProfileTS plotGCSpot plotGCSpotTS plotEISMINT2stats compareGCvar cf2GC
 bin_SCRIPTS = $(python_progs)
 
 EXTRA_DIST = $(python_progs)
